test/tests/stages/5_local_variables/valid/assignment_in_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  =
  identifier(a)
  =
  const int(0)
  ;
  return
  identifier(b)
  ;
  }
