test/tests/stages/5_local_variables/invalid_parse/extra_credit/compound_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  +=
  const int(0)
  ;
  return
  identifier(a)
  ;
  }
